home/test/dc-nginx-gocalc-conf-test.yml
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: v1
  kind: ServiceAccount
  namespace: test
  metadata:
    name: gocalc-name
- apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    name: gocalc-name
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: cluster-admin
  subjects:
    - kind: ServiceAccount
      name: gocalc-name
      namespace: test
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: gocalc
      app.kubernetes.io/component: gocalc
      app.kubernetes.io/instance: gocalc
    name: gocalc
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: vozerov/gocalc
      from:
        kind: DockerImage
        name: vozerov/gocalc
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig 
  metadata:
    name: gocalc-dp
    labels:
      app: gocalc
      app.kubernetes.io/component: gocalc
      app.kubernetes.io/instance: gocalc
  spec: 
   replicas: 2
   selector:
     app: gocalc
   template: 
     metadata:
       annotations:
         sidecar.istio.io/inject: "true" 
       labels: 
         app: gocalc
     spec: 
       containers:
       - name: gocalc
         image: vozerov/gocalc
       serviceAccountName: gocalc-name
- apiVersion: v1
  kind: Service
  metadata:
    name: gocalc
  spec:
    selector:
      app: gocalc
    ports:
    - protocol: TCP
      port: 8080
      targetPort: 7000
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: gocalc
    name: gocalc
  spec:
    port:
      targetPort: 7000-tcp
    to:
      kind: Service
      name: gocalc
      weight: 100
    wildcardPolicy: None
