home/test/nginx-gocalc-conf-test.yml
apiVersion: v1
kind: Pod
metadata: 
  name: gocalc-pod
  labels:
    app: gocal
spec: 
  containers:
  - name: gocalc
    image: vozerov/gocalc
  - name: nginx
    image: nginx:alpine
    volumeMounts: 
      - name: nginx-gocalc-conf
        mountPath: /etc/nginx/conf.d
  volumes:
    - name: nginx-gocalc-conf
      configMap:
        name: nginx-gocalc-conf
