home/test/svc-dp-gocalc.yml
apiVersion: v1
kind: Service
metadata: 
  name: gocalc-svc
spec: 
  type: LoadBalancer
  selector: 
    app: gocalc
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
