home/test/teamcity.yml
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: teamcity
- apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    name: teamcity-crb
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: cluster-admin
  subjects:
    - kind: ServiceAccount
      name: teamcity
      namespace: test
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: tm-server
      app.kubernetes.io/component: teamcity-server
      app.kubernetes.io/instance: teamcity-server
    name: tm-server
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: jetbrains/teamcity-server
      from:
        kind: DockerImage
        name: jetbrains/teamcity-server
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: tm-server
      app.kubernetes.io/component: teamcity-server
      app.kubernetes.io/instance: teamcity-server
    name: tm-server
  spec:
    replicas: 1
    selector:
      deploymentconfig: tm-server
    strategy:
      resources: {}
    template:
      metadata:
        labels:
          deploymentconfig: tm-server
      spec:
        containers:
        - image: jetbrains/teamcity-server
          name: teamcity-server
          env:
          - name: TEAMCITY_SERVER_MEM_OPTS
            value: "-Xmx2g -XX:ReservedCodeCacheSize=350m"
          ports:
          - containerPort: 8111
            protocol: TCP
          resources: {}
          securityContext:
            runAsUser: 1000
          volumeMounts:
          - mountPath: /data/teamcity_server/datadir1
            name: teamcity-test-data1
          - mountPath: /opt/teamcity/logs1
            name: teamcity-test-logs1
        volumes:
        - name: teamcity-test-data1
          persistentVolumeClaim:
            claimName: teamcity-test-data1
        - name: teamcity-test-logs1
          persistentVolumeClaim:
            claimName: teamcity-test-logs1
        securityContext: {}
        serviceAccountName: teamcity
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - tm-server
        from:
          kind: ImageStreamTag
          name: teamcity-server:latest
      type: ImageChange
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: teamcity-test-data1
  spec:
    accessModes:
    - ReadWriteMany
    resources:
      requests:
        storage: 2Gi
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: teamcity-test-logs1
  spec:
    accessModes:
    - ReadWriteMany
    resources:
      requests:
        storage: 1Gi
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: tm-server
      app.kubernetes.io/component: teamcity-server
      app.kubernetes.io/instance: teamcity-server
    name: tm-server
  spec:
    ports:
    - name: 8111-tcp
      port: 8111
      protocol: TCP
      targetPort: 8111
    selector:
      deploymentconfig: tm-server
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: tm-server
    name: tm-server
  spec:
    port:
      targetPort: 8111-tcp
    to:
      kind: Service
      name: tm-server
      weight: 100
    wildcardPolicy: None
